# uniclogs-cesium

./: .dockerignore  .gitignore  README.md  cesium-docker-compose.yaml  docker-compose.yaml  package.json  webpack.config.js
app/: __init__.py  requirements.txt
backend/: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  make_tiles.sh  pyproject.toml  requirements.txt  ruff.toml  run.py
backend/app/: __init__.py  data.py
backend/cesium_api/: __init__.py  __main__.py  app.py  data.py  dev-cors.html  routes.py
backend/cesium_api/views/: __init__.py  czml.py  groundstation.py  passes.py  satellite.py  tiles.py
docker/uniclogs-cesium/: Dockerfile
docker/uniclogs-cesium-data/: Dockerfile
frontend/: .eslintignore  .eslintrc.json  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  next.config.js  package-lock.json  package.json
frontend/components/: Cesium.jsx  Constants.jsx  DataFetcher.jsx  Overlay.jsx  Overlay.module.css  UpcommingPassesModal.jsx
frontend/pages/: _app.jsx  index.jsx
src/: index.html  index.js
